feat(subscriptions): updating htm,ts

--- a/src/app/Restock/monitoring/restaurant-sales/components/register-sales/register-sales.component.html
+++ b/src/app/Restock/monitoring/restaurant-sales/components/register-sales/register-sales.component.html
@@ -55,7 +55,7 @@
                     <!-- Dish price column -->
                     <ng-container matColumnDef="price">
                         <mat-header-cell *matHeaderCellDef>Unit Price</mat-header-cell>
-                        <mat-cell *matCellDef="let element">S/ {{ element.price }}</mat-cell>
+                        <mat-cell *matCellDef="let element">S/ {{ element.total_price }}</mat-cell>
                     </ng-container>
 
                     <!-- Dish quantity column with editable input -->
