--- a/src/app/Restock/profiles/components/business-data-settings/business-data-settings.component.html
+++ b/src/app/Restock/profiles/components/business-data-settings/business-data-settings.component.html
@@ -7,13 +7,15 @@
         <!--  Company Name -->
         <mat-label>Company Name</mat-label>
         <mat-form-field class="full-width" appearance="outline">
-          <input matInput [(ngModel)]="profile.companyName" type="text" placeholder="Enter your name" aria-label="Name" />
+          <input matInput [(ngModel)]="profile.business_name" type="text" placeholder="Enter your name"
+            aria-label="Name" />
         </mat-form-field>
 
         <!-- Company Address -->
         <mat-label>Company Address</mat-label>
         <mat-form-field class="full-width" appearance="outline">
-          <input matInput [(ngModel)]="profile.companyAddress" type="text" placeholder="Enter your last name" aria-label="Last Name" />
+          <input matInput [(ngModel)]="profile.business_address" type="text" placeholder="Enter your last name"
+            aria-label="Last Name" />
         </mat-form-field>
 
         <!-- Company Categories -->
@@ -29,12 +31,12 @@
         <!-- Mostrar chips -->
         <div class="category-chip-list">
           @for (category of selectedCategories; track category) {
-            <mat-chip color="primary" selected removable (removed)="removeCategory(category)">
-              {{ category }}
-              <button matChipRemove>
-                <mat-icon>cancel</mat-icon>
-              </button>
-            </mat-chip>
+          <mat-chip color="primary" selected removable (removed)="removeCategory(category)">
+            {{ category }}
+            <button matChipRemove>
+              <mat-icon>cancel</mat-icon>
+            </button>
+          </mat-chip>
           }
         </div>
 
@@ -42,7 +44,8 @@
     </mat-card-content>
 
     <mat-card-actions>
-      <button mat-raised-button class="save-changes-button" aria-label="Save changes" (click)="saveChanges()">SAVE CHANGES</button>
+      <button mat-raised-button class="save-changes-button" aria-label="Save changes" (click)="saveChanges()">SAVE
+        CHANGES</button>
     </mat-card-actions>
   </mat-card>
 </div>
