--- a/src/app/Restock/monitoring/restaurant-sales/pages/sales/sales.component.html
+++ b/src/app/Restock/monitoring/restaurant-sales/pages/sales/sales.component.html
@@ -54,14 +54,14 @@
 
                 <!-- Number of plates column -->
                 <ng-container matColumnDef="plates">
-                    <th mat-header-cell *matHeaderCellDef> Quantity of plates </th>
-                    <td mat-cell *matCellDef="let row"> {{ row.quantity_plates }} </td>
+                    <th mat-header-cell *matHeaderCellDef> Quantity of dishes </th>
+                    <td mat-cell *matCellDef="let row"> {{ row.recipeCount }} </td>
                 </ng-container>
 
                 <!-- Additional supplies column -->
                 <ng-container matColumnDef="additonal_supplies">
                     <th mat-header-cell *matHeaderCellDef> Quantity of additional supplies </th>
-                    <td mat-cell *matCellDef="let row"> {{ row.quantity_additonal_supplies }} </td>
+                    <td mat-cell *matCellDef="let row"> {{ row.additionalSupplyCount }} </td>
                 </ng-container>
 
                 <!-- Actions column -->
@@ -77,10 +77,9 @@
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             </table>
         </div>
-
         <!-- Paginator for table -->
         <div class="flex">
-            <mat-paginator [pageSize]="5" [pageSizeOptions]="[5, 10, 15]" showFirstLastButtons></mat-paginator>
+            <mat-paginator [pageSize]="15" [pageSizeOptions]="[5, 10, 15]" showFirstLastButtons></mat-paginator>
         </div>
     </div>
 </div>
