--- a/src/app/Restock/monitoring/suppliers-orders/components/approved-orders/approved-orders.component.html
+++ b/src/app/Restock/monitoring/suppliers-orders/components/approved-orders/approved-orders.component.html
@@ -59,7 +59,7 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef> Actions </th>
         <td mat-cell *matCellDef="let order">
-          <button mat-icon-button  (click)="openOrderDetails()" class="open-modal-btn" >
+          <button mat-icon-button  (click)="openOrderDetails(order)" class="open-modal-btn" >
             <mat-icon>menu_book</mat-icon>
           </button>
           <button mat-icon-button  (click)="openEditOrderDetails()" class="open-modal-btn"> <mat-icon>edit</mat-icon></button>
@@ -78,12 +78,12 @@
 
     <mat-paginator [pageSize]="5" [pageSizeOptions]="[2, 6, 10]" showFirstLastButtons></mat-paginator>
 
-    <app-order-details
-      [modelValue]="showModal"
-      [hideState]="false"
-      (modelValueChange)="onModalChange($event)"
-      (close)="onModalClose($event)">
-    </app-order-details>
+<!--    <app-order-details-->
+<!--      [modelValue]="showModal"-->
+<!--      [hideState]="false"-->
+<!--      (modelValueChange)="onModalChange($event)"-->
+<!--      (close)="onModalClose($event)">-->
+<!--    </app-order-details>-->
 
     <app-edit-order
       [modelValue]="showEditModal"
