--- a/src/app/Restock/monitoring/suppliers-orders/components/delivered-orders/delivered-orders.component.html
+++ b/src/app/Restock/monitoring/suppliers-orders/components/delivered-orders/delivered-orders.component.html
@@ -50,7 +50,7 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef> Actions </th>
         <td mat-cell *matCellDef="let order">
-          <button mat-icon-button  (click)="openOrderDetails()" class="open-modal-btn" >
+          <button mat-icon-button  (click)="openOrderDetails(order)" class="open-modal-btn" >
             <mat-icon>menu_book</mat-icon>
           </button>
         </td>
@@ -63,12 +63,12 @@
 
     <mat-paginator [pageSize]="5" [pageSizeOptions]="[2, 6, 10]" showFirstLastButtons></mat-paginator>
 
-    <app-order-details
-      [modelValue]="showModal"
-      [hideState]="false"
-      (modelValueChange)="onModalChange($event)"
-      (close)="onModalClose($event)">
-    </app-order-details>
+<!--    <app-order-details-->
+<!--      [modelValue]="showModal"-->
+<!--      [hideState]="false"-->
+<!--      (modelValueChange)="onModalChange($event)"-->
+<!--      (close)="onModalClose($event)">-->
+<!--    </app-order-details>-->
   }
 
 </div>
