--- a/src/app/Restock/monitoring/suppliers-orders/components/edit-order/edit-order.component.css
+++ b/src/app/Restock/monitoring/suppliers-orders/components/edit-order/edit-order.component.css
@@ -45,13 +45,13 @@
 /* Stepper Styles */
 .stepper-container {
   position: relative;
-  padding: 2rem 0;
-  margin-bottom: 2rem;
+  padding: 0.25rem 0 2rem;
+  margin-top: 1rem;
 }
 
 .progress-line {
   position: absolute;
-  top: 3rem;
+  top: 1.25rem;
   left: 5%;
   right: 5%;
   height: 2px;
@@ -128,6 +128,8 @@
 .check-icon {
   font-size: 0.75rem !important;
   font-weight: bold;
+  margin-top: 0.75rem;
+  margin-right: 0.5rem;
 }
 
 .step-label {
