--- a/src/app/Restock/resource/orders-to-suppliers/components/orders-toolbar/orders-toolbar.component.html
+++ b/src/app/Restock/resource/orders-to-suppliers/components/orders-toolbar/orders-toolbar.component.html
@@ -1,7 +1,6 @@
-<!-- Top actions: search, filters and create -->
 <div class="custom-toolbar">
   <div class="toolbar-left">
-    <span class="title">Orders</span>
+    <span class="title">{{ "order-to-supplier.title" | translate }}</span>
   </div>
 
   <div class="toolbar-center">
@@ -10,28 +9,21 @@
       <input
         matInput
         [formControl]="searchControl"
-        placeholder="Search orders"
+        [placeholder]="'order-to-supplier.searchOrderPlaceholder' | translate"
       />
     </div>
   </div>
 
   <div class="toolbar-right">
-    <!-- <mat-form-field appearance="outline" class="filter-field">
-      <mat-label>Filter by Supply</mat-label>
-      <mat-select [(ngModel)]="selectedSupply">
-        <mat-option *ngFor="let supply of supplies" [value]="supply.id">
-          {{ supply.name }}
-        </mat-option>
-      </mat-select>
-    </mat-form-field> -->
-
     <mat-form-field appearance="outline" class="filter-field">
-      <mat-label>Filter by Supplier</mat-label>
+      <mat-label>{{
+        "order-to-supplier.filterBySupplier" | translate
+      }}</mat-label>
       <mat-select
         [value]="selectedSupplierFilter"
         (selectionChange)="onSupplierChange($event.value)"
       >
-        <mat-option [value]="null">All</mat-option>
+        <mat-option [value]="null">{{ "common.all" | translate }}</mat-option>
         <mat-option *ngFor="let supplier of suppliers" [value]="supplier.id">
           {{ supplier.name }}
         </mat-option>
@@ -43,7 +35,7 @@
       class="custom-green-button"
       (click)="onCreateOrder()"
     >
-      CREATE
+      {{ "order-to-supplier.createOrder" | translate }}
       <mat-icon>add_circle</mat-icon>
     </button>
   </div>
