--- a/src/app/Restock/resource/orders-to-suppliers/components/create-orders-modal/create-orders-modal.component.html
+++ b/src/app/Restock/resource/orders-to-suppliers/components/create-orders-modal/create-orders-modal.component.html
@@ -1,13 +1,20 @@
 <ng-template #createOrderModal>
   <div class="order-modal-container">
-    <h2 mat-dialog-title>Create Order</h2>
+    <h2 mat-dialog-title>{{ "order-to-supplier.createOrder" | translate }}</h2>
 
     <mat-dialog-content>
       <mat-tab-group [(selectedIndex)]="tabIndex">
-        <!-- Paso 1 -->
-        <mat-tab label="Select Supply">
+        <mat-tab
+          label="{{
+            'order-to-supplier.create-order-modal.select-supply-tab.title'
+              | translate
+          }}"
+        >
           <mat-form-field appearance="fill" class="supply-select">
-            <mat-label>Supply</mat-label>
+            <mat-label>{{
+              "order-to-supplier.create-order-modal.select-supply-tab.selectSupply"
+                | translate
+            }}</mat-label>
             <mat-select
               [(ngModel)]="selectedSupply"
               (selectionChange)="onSupplyChange()"
@@ -22,7 +29,10 @@
 
           <div *ngIf="selectedSupply">
             <div class="sort-section">
-              <span>Order by Price</span>
+              <span>{{
+                "order-to-supplier.create-order-modal.select-supply-tab.orderByPrice"
+                  | translate
+              }}</span>
               <button mat-icon-button (click)="toggleSortOrder()">
                 <mat-icon>swap_vert</mat-icon>
               </button>
@@ -34,22 +44,42 @@
               class="mat-elevation-z1 full-width"
             >
               <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef>Supplier</th>
+                <th mat-header-cell *matHeaderCellDef>
+                  {{
+                    "order-to-supplier.create-order-modal.select-supply-tab.table.supplier"
+                      | translate
+                  }}
+                </th>
                 <td mat-cell *matCellDef="let el">{{ el.name }}</td>
               </ng-container>
 
               <ng-container matColumnDef="price">
-                <th mat-header-cell *matHeaderCellDef>Price</th>
+                <th mat-header-cell *matHeaderCellDef>
+                  {{
+                    "order-to-supplier.create-order-modal.select-supply-tab.table.price"
+                      | translate
+                  }}
+                </th>
                 <td mat-cell *matCellDef="let el">S/ {{ el.price }}</td>
               </ng-container>
 
               <ng-container matColumnDef="available">
-                <th mat-header-cell *matHeaderCellDef>Available</th>
+                <th mat-header-cell *matHeaderCellDef>
+                  {{
+                    "order-to-supplier.create-order-modal.select-supply-tab.table.availableStock"
+                      | translate
+                  }}
+                </th>
                 <td mat-cell *matCellDef="let el">{{ el.available }}</td>
               </ng-container>
 
               <ng-container matColumnDef="select">
-                <th mat-header-cell *matHeaderCellDef>Select</th>
+                <th mat-header-cell *matHeaderCellDef>
+                  {{
+                    "order-to-supplier.create-order-modal.select-supply-tab.table.select"
+                      | translate
+                  }}
+                </th>
                 <td mat-cell *matCellDef="let el">
                   <mat-checkbox
                     [(ngModel)]="el.selected"
@@ -74,7 +104,10 @@
 
           <div class="modal-actions">
             <button mat-flat-button color="warn" (click)="closeModal()">
-              CANCEL
+              {{
+                "order-to-supplier.create-order-modal.select-supply-tab.cancel"
+                  | translate
+              }}
             </button>
             <button
               mat-flat-button
@@ -82,15 +115,25 @@
               (click)="nextTab()"
               [disabled]="!hasSelection()"
             >
-              NEXT
+              {{
+                "order-to-supplier.create-order-modal.select-supply-tab.next"
+                  | translate
+              }}
             </button>
           </div>
         </mat-tab>
 
-        <!-- Paso 2 -->
-        <mat-tab label="Confirm Order">
+        <mat-tab
+          label="{{
+            'order-to-supplier.create-order-modal.order-details-tab.title'
+              | translate
+          }}"
+        >
           <div *ngIf="fullOrder.length === 0 && currentSelections.length === 0">
-            No suppliers selected.
+            {{
+              "order-to-supplier.create-order-modal.order-details-tab.noSuppliesSelected"
+                | translate
+            }}
           </div>
 
           <div class="card-grid">
@@ -104,11 +147,30 @@
               </mat-card-header>
 
               <mat-card-content>
-                <p><strong>Precio:</strong> S/ {{ s.price }}</p>
-                <p><strong>Disponible:</strong> {{ s.available }} unidades</p>
+                <p>
+                  <strong
+                    >{{
+                      "order-to-supplier.create-order-modal.order-details-tab.order-details-card.price"
+                        | translate
+                    }}:</strong
+                  >
+                  S/ {{ s.price }}
+                </p>
+                <p>
+                  <strong
+                    >{{
+                      "order-to-supplier.create-order-modal.order-details-tab.order-details-card.availableStock"
+                        | translate
+                    }}:</strong
+                  >
+                  {{ s.available }} unidades
+                </p>
 
                 <mat-form-field appearance="fill" class="quantity-field">
-                  <mat-label>Cantidad</mat-label>
+                  <mat-label>{{
+                    "order-to-supplier.create-order-modal.order-details-tab.order-details-card.quantity"
+                      | translate
+                  }}</mat-label>
                   <input
                     matInput
                     type="number"
@@ -136,15 +198,26 @@
           </div>
 
           <p>
-            <strong>Total: S/ {{ getTotal() }}</strong>
+            <strong
+              >{{
+                "order-to-supplier.create-order-modal.order-details-tab.total"
+                  | translate
+              }}: S/ {{ getTotal() }}</strong
+            >
           </p>
 
           <div class="modal-actions">
             <button mat-flat-button color="primary" (click)="onCreateOrder()">
-              PLACE ORDER
+              {{
+                "order-to-supplier.create-order-modal.order-details-tab.placeOrder"
+                  | translate
+              }}
             </button>
             <button mat-stroked-button color="accent" (click)="addMoreSupply()">
-              ADD MORE
+              {{
+                "order-to-supplier.create-order-modal.order-details-tab.addMoreSupplies"
+                  | translate
+              }}
             </button>
           </div>
         </mat-tab>
