--- a/src/app/Restock/monitoring/suppliers-orders/pages/suppliers-orders-overview/suppliers-orders-overview.component.html
+++ b/src/app/Restock/monitoring/suppliers-orders/pages/suppliers-orders-overview/suppliers-orders-overview.component.html
@@ -7,7 +7,7 @@
         [orderSuppliesDetails]="detailedSuppliesGroupedByOrder"
         [batchesGroupedByOrder]="batchesGroupedByOrder"
         (declineDialog)="openDeleteOrderDialog($event, 'decline')"
-        (manageNewOrderModal)="openManageOrdersModal($event)"
+        (manageNewOrderModal)="openManageOrderModal($event)"
         (detailsModal)="openOrderDetailsModal($event, true)"
       />
     </mat-tab>
@@ -18,6 +18,7 @@
         [adminRestaurantsProfiles]="restaurantNameMap"
         (deleteDialog)="openDeleteOrderDialog($event, 'cancel')"
         (detailsModal)="openOrderDetailsModal($event, false)"
+        (editModal)="openEditOrderModal($event)"
       />
     </mat-tab>
 
